<resources>
    <string name="app_name">Transport EAD</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Home_button1">📅 Schedule</string>
    <string name="Home_button2">📓 Read QR</string>
    <string name="Home_button3">Payment</string>
    <string name="Home_button4">My Account</string>
    <string name="Home_button5">Manage</string>
    <string name="Home_button6">Summary</string>
    <string name="rervationDate">Reservation Date</string>
    <string name="passengerName">Your Name</string>
    <string name="phonenNumebr">Phone Number</string>
    <string name="destination">Destination</string>
    <string name="reservationTime">Time</string>
    <string name="loginNic">Enter NIC</string>
    <string name="loginPaasword">Enter Password</string>
</resources>