<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="139dp"
        android:src="@drawable/train" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Booking"
        android:textColor="#B61F15"
        android:textSize="35dp"
        android:textStyle="bold"
        android:letterSpacing="0.03"/>

    <EditText
        android:id="@+id/ReservationDate"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:hint="@string/rervationDate"
        android:background="@drawable/forget"
        android:inputType="date"
        android:paddingLeft="20dp"
        android:textColor="#95120a"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/PassengerName"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/forget"
        android:hint="@string/passengerName"
        android:paddingLeft="20dp"
        android:textColor="#95120a"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/PhoneNumber"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/forget"
        android:hint="@string/phonenNumebr"
        android:inputType="number"
        android:maxLength="10"
        android:paddingLeft="20dp"
        android:textColor="#95120a"
        android:textSize="18dp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/Destination"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/forget"
        android:hint="@string/destination"
        android:paddingLeft="20dp"
        android:textColor="#95120a"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Time"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/forget"
        android:hint="@string/reservationTime"
        android:paddingLeft="20dp"
        android:textColor="#95120a"
        android:textSize="18dp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/userregibtn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="Add Reservation"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:layout_marginTop="25dp"/>


</LinearLayout>