<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="@drawable/homebg">

    <Button
        android:id="@+id/btnqr"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="📓 Read QR"
        android:textAllCaps="true"
        app:backgroundTint="@color/primaryhomebtn"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/btnbmn2"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/Home_button1"
        android:textAllCaps="true"
        app:backgroundTint="@color/primaryhomebtn"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/btnmnage"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/Home_button6"
        android:textAllCaps="true"
        app:backgroundTint="@color/primarybtn"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807" />

    <Button
        android:id="@+id/btnbmn4"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/Home_button5"
        android:textAllCaps="true"
        app:backgroundTint="@color/primarybtn"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807" />

    <Button
        android:id="@+id/btnque"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/Home_button3"
        android:textAllCaps="true"
        app:backgroundTint="@color/secondarybtn"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653" />

    <Button
        android:id="@+id/btnacc"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/Home_button4"
        android:textAllCaps="true"
        app:backgroundTint="@color/secondarybtn"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653" />

</androidx.constraintlayout.widget.ConstraintLayout>